--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <ul class="social">
         <li>
             <a href="">
-                <img src="img/youtube.png" alt="Youtuber">
+                <img src="IMG/youtube.png" alt="Youtuber">
             </a>
         </li>
         <li>
