--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="profile">
-        <img src="img/thiago.jpg" alt="Thiago" class="avatar">
+        <img src="IMG/thiago.jpg" alt="Thiago" class="avatar">
         <h1>Thiago M. Medeiros</h1>
         <h2>Programador | Professor | Youtuber</h2>
     </div>
@@ -28,22 +28,22 @@
         </li>
         <li>
             <a href="">
-                <img src="img/insta.svg" alt="Instagram">
+                <img src="IMG/insta.svg" alt="Instagram">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="img/linkedin.svg" alt="Linkedin">
+                <img src="IMG/linkedin.svg" alt="Linkedin">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="img/github.svg" alt="Github">
+                <img src="IMG/github.svg" alt="Github">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="img/whatsapp.png" alt="Whatsapp">
+                <img src="IMG/whatsapp.png" alt="Whatsapp">
             </a>
         </li>
     </ul>
