Adicionando o google analytics

--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NR0WE24V5"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9NR0WE24V5');
+    </script>
 </head>
 <body>
     <div class="profile">
-        <img src="IMG/thiago.jpg" alt="Thiago" class="avatar">
+        <img src="img/thiago.jpg" alt="Thiago" class="avatar">
         <h1>Thiago M. Medeiros</h1>
         <h2>Programador | Professor | Youtuber</h2>
     </div>
@@ -23,27 +32,27 @@
     <ul class="social">
         <li>
             <a href="">
-                <img src="IMG/youtube.png" alt="Youtuber">
+                <img src="img/youtube.png" alt="Youtuber">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="IMG/insta.svg" alt="Instagram">
+                <img src="img/insta.svg" alt="Instagram">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="IMG/linkedin.svg" alt="Linkedin">
+                <img src="img/linkedin.svg" alt="Linkedin">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="IMG/github.svg" alt="Github">
+                <img src="img/github.svg" alt="Github">
             </a>
         </li>
         <li>
             <a href="">
-                <img src="IMG/whatsapp.png" alt="Whatsapp">
+                <img src="img/whatsapp.png" alt="Whatsapp">
             </a>
         </li>
     </ul>
